--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,13 @@
-
-/* Your CSS Code here. */
+.moviePic{
+	height:400px;
+		width:auto;
+	opacity:0.9;
+	
+}
+.movieDetail{
+	position:relative;
+	top:20px;
+	width:80%;
+	text-align:center;
+	font-size:px;
+}
